apply plugin: 'com.android.application'
apply plugin: 'com.jakewharton.hugo'

android {
    compileSdkVersion 26

    defaultConfig {
        applicationId "com.mii.android"
        minSdkVersion 16
        targetSdkVersion 26
        versionCode 1
        versionName "1.0"
        // to store google analytics/firebase configuration
        copy {
            from "../secret/"
            into "."
            include "*.json"
        }
        multiDexEnabled true
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        targetCompatibility 1.8
        sourceCompatibility 1.8
    }

    testOptions {
        unitTests.returnDefaultValues = true
        unitTests.all {
            // All the usual Gradle options.
            jvmArgs '-XX:MaxPermSize=256m'
        }
    }
}

dependencies {

    final SUPPORT_LIBRARY_VERSION = '26.1.0'
    final PLAY_SERVICES_VERSION = '10.0.1'
    final MOCKITO_VERSION = '1.10.19'
    final JUNIT_VERSION = '4.12'



    implementation fileTree(dir: 'libs', include: ['*.jar'])

    // ---- APP DEPENDENCIES
    implementation 'com.facebook.android:audience-network-sdk:4.25.0'
    implementation 'com.facebook.fresco:fresco:1.3.0'
    implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'

    implementation "com.google.firebase:firebase-database:$PLAY_SERVICES_VERSION"
    implementation "com.google.firebase:firebase-core:$PLAY_SERVICES_VERSION"
    implementation "com.google.firebase:firebase-crash:$PLAY_SERVICES_VERSION"
    implementation "com.google.firebase:firebase-storage:$PLAY_SERVICES_VERSION"
    implementation "com.google.firebase:firebase-auth:$PLAY_SERVICES_VERSION"
    implementation "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
    implementation "com.android.support:design:$SUPPORT_LIBRARY_VERSION"
    implementation "com.android.support:support-v4:$SUPPORT_LIBRARY_VERSION"

    implementation 'io.reactivex:rxandroid:1.2.1'
    implementation 'io.reactivex:rxjava:1.1.8'
    implementation 'com.jakewharton.rxrelay:rxrelay:1.1.0'
    implementation 'com.github.frangsierra:rx2firebase:1.4.0'

    implementation 'com.jakewharton:butterknife:8.4.0'
    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'

    // ---- UNIT TEST CONFIGURATION
    testCompile "org.mockito:mockito-core:$MOCKITO_VERSION"

    // Added for more collections matchers.
    // Use version 1.0.0.1 with Hamcrest 1.3, version 2.0.0.0 with Hamcrest 2.0
    // https://github.com/hamcrest/hamcrest-junit
    testCompile('org.hamcrest:hamcrest-junit:1.0.0.1') {
        exclude group: 'org.hamcrest', module: 'hamcrest-core'
    }

    testCompile "junit:junit:$JUNIT_VERSION"
}

apply plugin: 'com.google.gms.google-services'